--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body style="display: flex;">
+    <div id="app" style="display: flex; flex: max-content;"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
